unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/DSCORGPKG__DiscoverOrg_Operation__c.object-meta.xml
<CustomObject>
    <label>DiscoverOrg Operation</label>
    <nameField>
        <displayFormat>OP-{0000000000}</displayFormat>
        <label>Operation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>