unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Account_Contact__c</fullName>
    <label>Multiple Account's Contact</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>