unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Account_s_Contact_DOIds__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Account_s_Contact_DOIds__c</fullName>
    <label>Account's Contact DOIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>