unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Account_Unchanged__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Account_Unchanged__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Account Unchanged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>