unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Account_Unchanged_DO_ID__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Account_Unchanged_DO_ID__c</fullName>
    <label>Account Unchanged DO ID</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>