unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__AccountIdsUnchange__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__AccountIdsUnchange__c</fullName>
    <label>AccountIdsUnchange</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>