unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Contact_Updated_DO_ID__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Contact_Updated_DO_ID__c</fullName>
    <label>Contact Updated DO ID</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>