unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Contacts_Updated__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Contacts_Updated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contacts Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>