unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__customFieldLead__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__customFieldLead__c</fullName>
    <label>customFieldLead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>