unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__customValueForAccount__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__customValueForAccount__c</fullName>
    <label>customValueForAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>