unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__customValueForContact__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__customValueForContact__c</fullName>
    <label>customValueForContact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>