unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__customValueForLead__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__customValueForLead__c</fullName>
    <label>customValueForLead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>