unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Duplicates_DO_ID_Lead__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Duplicates_DO_ID_Lead__c</fullName>
    <label>Duplicates DO ID Lead</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>