unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__isBatchesCompleted__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isBatchesCompleted__c</fullName>
    <formula>IF( DSCORGPKG__Total_Batches_Completed__c  =  DSCORGPKG__Total_Batches__c  ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isBatchesCompleted</label>
    <type>Checkbox</type>
</CustomField>