unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AddUpdateSelectedAccountsContacts</fullName>
            </value>
            <value>
                <fullName>AddUpdateSelectedAccounts</fullName>
            </value>
            <value>
                <fullName>AddUpdateSelectedContacts</fullName>
            </value>
            <value>
                <fullName>AddUpdateSelectedLeads</fullName>
            </value>
            <value>
                <fullName>AddUpdateAllAccounts</fullName>
            </value>
            <value>
                <fullName>AddUpdateAllContacts</fullName>
            </value>
            <value>
                <fullName>AddUpdateAllLeads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>