unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Pages_Completed__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Pages_Completed__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>Pages Completed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>