unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Search_Query__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Search_Query__c</fullName>
    <label>Search Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>