unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Selected_Campaign__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Selected_Campaign__c</fullName>
    <label>Selected Campaign</label>
    <length>18</length>
    <type>Text</type>
</CustomField>