unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Selected_Trigger_IDs__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Selected_Trigger_IDs__c</fullName>
    <label>Selected Trigger IDs</label>
    <type>TextArea</type>
</CustomField>