unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Total_Batches__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Total_Batches__c</fullName>
    <formula>CEILING( DSCORGPKG__Total_Records__c/30 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>