unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Total_Batches_Completed__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Total_Batches_Completed__c</fullName>
    <formula>IF( MOD( DSCORGPKG__Total_Records__c ,30) = 0, DSCORGPKG__Pages_Completed__c,DSCORGPKG__Pages_Completed__c+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Batches Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>