unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__Total_Records__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Total_Records__c</fullName>
    <label>Total Records</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>