unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Operation__c/fields/DSCORGPKG__User__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DiscoverOrg_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>